k8s/coma/apps/mcaptcha/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcaptcha
  namespace: mcaptcha
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: "captcha.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mcaptcha-main
                port:
                  number: 7000
  tls:
    - hosts:
        - "captcha.artichoke.cc"
      secretName: artichokecc-cert
